2007-11-18 Jim Garlick <garlick.jim@gmail.com>

	* a6032.[ch] : New.

	* gpib.[ch] : Enhancements/bug fixes for a6032:
	- _vxird() internally issues multiple reads until 'reason' is nonzero
	- added gpib_qry(), write+read+spoll
	- added gpib_decode_488_2_data()

2007-11-16 Jim Garlick <garlick.jim@gmail.com>

	* dg535.c : Shorten usage output by combining get/set lines.

2007-11-15 Jim Garlick <garlick.jim@gmail.com>

	* etc/gpib.conf : Readded with ni-usb config.

	* src/gpib.c : Fixed some bugs that emerged when compiling with
	linux-gpib again.

	* gpib-utils.spec : Install the gpib-utils.conf file.

	* src/Makefile : Enable linux-gpib.

	* : tag gpib-utils-1-3-pre1 

2007-11-14 Jim Garlick <garlick.jim@gmail.com>

	* src/dg535.c : Complete output query commands.  
	Add get/set delay command.

2007-11-13 Jim Garlick <garlick.jim@gmail.com>

	* src/hp1630.c : Swallow InvAsm with XX learn string.
	Add -d option to set the date [Rudolf Reuter].
	
	* htdocs/index.html : Correct print screen example [Rudolf Reuter]

	* htdocs/filer.gif : Regenerate with mono colors [Rudolf Reuter].

	* htdocs/dinotrace.gif : Restore corrupted image.

	* src/errstr.[ch] : Folded in with util.[ch], renamed errtab to
	strtab, finderr() to findstr(), added rfindstr(), changed 
	"unknown error %d" to "unknown code %d". 

	* src/gpib.[ch] : Add gpib-utils.conf config file support with
	gpib_default_addr().  Remove byaddr and byname initialization
	functions and have all initialization go through gpib_init().

	* src/* : Update to reflect initialization and error string handling
	changes in gpib.[ch].

	* examples/gpib.conf : Removed.  We now explicitly set any non-default
	flags in each program.

	* man/* : Removed note about default board number and gpib.conf
	entry since these are deprecated.

2007-11-11 Jim Garlick <garlick.jim@gmail.com>

	* src/dg535.c : Added trigger control functions.

2007-11-10 Jim Garlick <garlick.jim@gmail.com>
